--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,11 +1,15 @@
 .container {
-    text-align: center;
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    padding: 20px;
-  }
-  
-  .main-h1 {
-    margin-bottom: 20px;
-  }
-  
+  text-align: center;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 1200px;
+  margin: 20px auto;
+  color: var(--text-clr);
+}
+
+.main-h1 {
+  margin-bottom: 20px;
+  color: var(--text-clr);
+}
